# coveralls-issue

./: .coveragerc  .gitignore  .ruff.toml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
myapp/: __init__.py  main.py
myapp_test/: conftest.py  test_main.py
