[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.0.1"
authors = [{ name = "AbdealiLoKo" }]
description = "My coveralls test package"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }

[tool.setuptools]
packages = ["myapp"]
